Addressed code smells and simplified code